# test1

./: CMakeLists.txt  liba_foo.cpp  liba_foo.h  libb_bar.cpp  libc_bar.cpp  main.cpp
